[package]
name = "substrate-simnode"
version = "0.1.0"
authors = ["Seun Lanlege <seun@polytope.capital>"]
edition = "2021"
publish = false

[workspace]
members = ["runtime-apis"]

[dependencies]
# client deps
sc-executor = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-service = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-informant = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-network = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-cli = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-basic-authorship = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-rpc = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-tracing = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-transaction-pool = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-finality-grandpa = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-consensus-babe = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-consensus-aura = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-consensus-babe = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-consensus = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-transaction-pool-api = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-client-api = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sc-rpc-server = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }

# primitive deps
sp-core = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-blockchain = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-block-builder = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-api = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-transaction-pool = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-consensus = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-runtime = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-session = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-offchain = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-inherents = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-keyring = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-externalities = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-state-machine = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-wasm-interface = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }
sp-runtime-interface = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }

# pallets
frame-system = { git = "https://github.com/chainflip-io/substrate", tag = "chainflip-monthly-2022-05" }

# others
codec = { package = "parity-scale-codec", version = "3" }
log = "0.4.8"
futures = "0.3.16"
tokio = { version = "1.13", features = ["signal"] }
clap = { version = "3.0", features = ["derive"] }
# Calling RPC
jsonrpc-core = "18.0"
num-traits = "0.2.14"

# local deps
simnode-runtime-apis = { path = "./runtime-apis" }


[features]
default = ["std"]
# This is here so that we can use the `runtime_interface` procedural macro
std = []
